Update Guppy workspace UI and docs
